[gd_scene load_steps=40 format=2]

[ext_resource path="res://ScriptFolder/Hero/KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Resources/hero/adventurer-idle-2-03.png" type="Texture" id=2]
[ext_resource path="res://Resources/hero/adventurer-idle-2-02.png" type="Texture" id=3]
[ext_resource path="res://Resources/hero/adventurer-idle-2-00.png" type="Texture" id=4]
[ext_resource path="res://Resources/hero/adventurer-idle-2-01.png" type="Texture" id=5]
[ext_resource path="res://Resources/hero/adventurer-run-01.png" type="Texture" id=6]
[ext_resource path="res://Resources/hero/adventurer-attack3-00.png" type="Texture" id=7]
[ext_resource path="res://Resources/hero/adventurer-run-00.png" type="Texture" id=8]
[ext_resource path="res://Resources/hero/adventurer-run-02.png" type="Texture" id=9]
[ext_resource path="res://Resources/hero/adventurer-run-04.png" type="Texture" id=10]
[ext_resource path="res://Resources/hero/adventurer-run-05.png" type="Texture" id=11]
[ext_resource path="res://Resources/hero/adventurer-attack1-04.png" type="Texture" id=12]
[ext_resource path="res://Resources/hero/adventurer-attack1-01.png" type="Texture" id=13]
[ext_resource path="res://Resources/hero/adventurer-attack1-00.png" type="Texture" id=14]
[ext_resource path="res://Resources/hero/adventurer-attack1-02.png" type="Texture" id=15]
[ext_resource path="res://Resources/hero/adventurer-attack1-03.png" type="Texture" id=16]
[ext_resource path="res://Resources/hero/adventurer-attack3-01.png" type="Texture" id=17]
[ext_resource path="res://Resources/hero/adventurer-attack3-04.png" type="Texture" id=18]
[ext_resource path="res://Resources/hero/adventurer-attack3-02.png" type="Texture" id=19]
[ext_resource path="res://Resources/hero/adventurer-attack3-03.png" type="Texture" id=20]
[ext_resource path="res://Resources/hero/adventurer-attack3-05.png" type="Texture" id=21]
[ext_resource path="res://Resources/footstep.ogg" type="AudioStream" id=22]
[ext_resource path="res://Resources/hero/adventurer-run-03.png" type="Texture" id=23]
[ext_resource path="res://Resources/hit.mp3" type="AudioStream" id=24]
[ext_resource path="res://Resources/shadow.png" type="Texture" id=25]
[ext_resource path="res://Resources/hero/adventurer-attack2-05.png" type="Texture" id=26]
[ext_resource path="res://Resources/hero/adventurer-attack2-00.png" type="Texture" id=27]
[ext_resource path="res://Resources/hero/adventurer-attack2-01.png" type="Texture" id=28]
[ext_resource path="res://Resources/hero/adventurer-attack2-02.png" type="Texture" id=29]
[ext_resource path="res://Resources/hero/adventurer-attack2-03.png" type="Texture" id=30]
[ext_resource path="res://Resources/hero/adventurer-attack2-04.png" type="Texture" id=31]

[sub_resource type="Animation" id=6]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/hitBox/hitCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/hitBox/hitCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 13.5, -1.5 ), Vector2( 7, -14.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/hitBox/hitCollision:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 15.125, 8 ), Vector2( 11, 15 ), Vector2( 11, 4.5 ) ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("HitAudio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.224015,
"start_offset": 0.0,
"stream": ExtResource( 24 )
} ],
"times": PoolRealArray( 0.05 )
}

[sub_resource type="Animation" id=12]
resource_name = "Attack1"
length = 0.42
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.2, 0.28, 0.35, 0.42 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 26 ), ExtResource( 26 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/hitBox/hitCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/hitBox/hitCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 7, -14.5 ), Vector2( 15.5, 3.5 ), Vector2( -13, 9.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/hitBox/hitCollision:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11, 4.5 ), Vector2( 8.5, 15.5 ), Vector2( 11, 6.5 ) ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("HitAudio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.220657,
"start_offset": 0.0,
"stream": ExtResource( 24 )
} ],
"times": PoolRealArray( 0.05 )
}

[sub_resource type="Animation" id=10]
resource_name = "Attack2"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 21 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/hitBox/hitCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/hitBox/hitCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 11.375, 8.5 ), Vector2( -13.25, 12.25 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("HitAudio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.184698,
"start_offset": 0.0,
"stream": ExtResource( 24 )
} ],
"times": PoolRealArray( 0.1 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/hitBox/hitCollision:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 15.125, 8 ), Vector2( 15.125, 8 ), Vector2( 11, 4.5 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
length = 0.36
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/hitBox/hitCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/hitBox/hitCollision:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/hitBox/hitCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7.5, 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FootStep:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/hitBox/hitCollision:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 14.625, 8 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("bodyCollision:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9, 14 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 23 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/hitBox/hitCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 14 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 14.625, 8 )

[node name="KinematicBody2D" type="KinematicBody2D"]
z_index = 2
collision_layer = 16
collision_mask = 8
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 6 )
anims/Attack1 = SubResource( 12 )
anims/Attack2 = SubResource( 10 )
anims/Idle = SubResource( 7 )
anims/RESET = SubResource( 11 )
anims/Walk = SubResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="bodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 26 )

[node name="hitBox" type="Area2D" parent="Sprite"]
collision_mask = 2

[node name="hitCollision" type="CollisionShape2D" parent="Sprite/hitBox"]
position = Vector2( 7.5, 7 )
shape = SubResource( 5 )
disabled = true

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.352941 )
position = Vector2( 2.98023e-08, 18 )
scale = Vector2( 0.419643, 0.15 )
z_index = -100
texture = ExtResource( 25 )

[node name="FootStep" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 22 )

[node name="FootStepTimer" type="Timer" parent="FootStep"]
wait_time = 0.3
one_shot = true

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 24 )
